--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Beer App</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bevan:wght@400;700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700">
   </head>
   <body>
     <noscript>Vous devez activer JavaScript pour lancer cette application.</noscript>
